--- a/index.html
+++ b/index.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="#" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Akronim&family=New+Tegomin&family=Shadows+Into+Light&family=Zhi+Mang+Xing&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/style.css" />
+    <title>Calculator</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='icon' href="#">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-  <link rel="stylesheet" href="style/style.css">
-  <title>Document</title>
-</head>
-
-<body>
-
-  <h1>hello to the world</h1>
-</body>
-
+  <body>
+    <div class="calculator-panel-container">
+      <div class="control-panel-box">
+        <span></span>
+        <div class="calculator-panel">
+          <div class="numbers">
+            <div id="screennn">Polina</div>
+            <div id="null"><p class="buttons-longer">0</p></div>
+            <div id="one"><p class="buttons">1</p></div>
+            <div id="two"><p class="buttons">2</p></div>
+            <div id="three"><p class="buttons">3</p></div>
+            <div id="four"><p class="buttons">4</p></div>
+            <div id="five"><p class="buttons">5</p></div>
+            <div id="six"><p class="buttons">6</p></div>
+            <div id="seven"><p class="buttons">7</p></div>
+            <div id="eight"><p class="buttons">8</p></div>
+            <div id="nine"><p class="buttons">9</p></div>
+            <div id="coma"><p class="buttons">,</p></div>
+            <div id="equal"><p class="buttons">=</p></div>
+            <div id="plus"><p class="buttons">+</p></div>
+            <div id="minus"><p class="buttons">-</p></div>
+            <div id="multi"><p class="buttons">*</p></div>
+            <div id="devide"><p class="buttons">&#247;</p></div>
+            <div id="clear"><p class="buttons-longer">C</p></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
