Change the css style to electric blue

--- a/index.html
+++ b/index.html
@@ -16,29 +16,30 @@
 
   <body>
     <div class="calculator-panel-container">
-      <div class="control-panel-box">
-        <span></span>
-        <div class="calculator-panel">
-          <div class="numbers">
-            <div id="screennn">Polina</div>
-            <div id="null"><p class="buttons-longer">0</p></div>
-            <div id="one"><p class="buttons">1</p></div>
-            <div id="two"><p class="buttons">2</p></div>
-            <div id="three"><p class="buttons">3</p></div>
-            <div id="four"><p class="buttons">4</p></div>
-            <div id="five"><p class="buttons">5</p></div>
-            <div id="six"><p class="buttons">6</p></div>
-            <div id="seven"><p class="buttons">7</p></div>
-            <div id="eight"><p class="buttons">8</p></div>
-            <div id="nine"><p class="buttons">9</p></div>
-            <div id="coma"><p class="buttons">,</p></div>
-            <div id="equal"><p class="buttons">=</p></div>
-            <div id="plus"><p class="buttons">+</p></div>
-            <div id="minus"><p class="buttons">-</p></div>
-            <div id="multi"><p class="buttons">*</p></div>
-            <div id="devide"><p class="buttons">&#247;</p></div>
-            <div id="clear"><p class="buttons-longer">C</p></div>
+      <div class="calculator-panel-hidden"></div>
+      <div class="calculator-panel">
+        <div class="numbers">
+          <div id="screennn">
+            <small id="screenSmall">15+18=</small>
+            <p id="screenBig">23</p>
           </div>
+          <div id="null"><p class="buttons-longer">0</p></div>
+          <div id="one"><p class="buttons">1</p></div>
+          <div id="two"><p class="buttons">2</p></div>
+          <div id="three"><p class="buttons">3</p></div>
+          <div id="four"><p class="buttons">4</p></div>
+          <div id="five"><p class="buttons">5</p></div>
+          <div id="six"><p class="buttons">6</p></div>
+          <div id="seven"><p class="buttons">7</p></div>
+          <div id="eight"><p class="buttons">8</p></div>
+          <div id="nine"><p class="buttons">9</p></div>
+          <div id="coma"><p class="buttons">,</p></div>
+          <div id="equal"><p class="buttons">=</p></div>
+          <div id="plus"><p class="buttons">+</p></div>
+          <div id="minus"><p class="buttons">-</p></div>
+          <div id="multi"><p class="buttons">*</p></div>
+          <div id="devide"><p class="buttons">&#247;</p></div>
+          <div id="clear"><p class="buttons-longer">C</p></div>
         </div>
       </div>
     </div>
