--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="#" />
+    <link rel="icon" href="images/logo.jpg" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -23,26 +23,30 @@
             <small id="screenSmall">15+18=</small>
             <p id="screenBig">23</p>
           </div>
-          <div id="null"><p class="buttons-longer">0</p></div>
-          <div id="one"><p class="buttons">1</p></div>
-          <div id="two"><p class="buttons">2</p></div>
-          <div id="three"><p class="buttons">3</p></div>
-          <div id="four"><p class="buttons">4</p></div>
-          <div id="five"><p class="buttons">5</p></div>
-          <div id="six"><p class="buttons">6</p></div>
-          <div id="seven"><p class="buttons">7</p></div>
-          <div id="eight"><p class="buttons">8</p></div>
-          <div id="nine"><p class="buttons">9</p></div>
-          <div id="coma"><p class="buttons">,</p></div>
-          <div id="equal"><p class="buttons">=</p></div>
-          <div id="plus"><p class="buttons">+</p></div>
-          <div id="minus"><p class="buttons">-</p></div>
-          <div id="multi"><p class="buttons">*</p></div>
-          <div id="devide"><p class="buttons">&#247;</p></div>
-          <div id="clear"><p class="buttons-longer">C</p></div>
+          <div id="null"><p class="buttons-longer buttons-lighter">0</p></div>
+          <div id="one"><p class="buttons buttons-lighter">1</p></div>
+          <div id="two"><p class="buttons buttons-lighter">2</p></div>
+          <div id="three"><p class="buttons buttons-lighter">3</p></div>
+          <div id="four"><p class="buttons buttons-lighter">4</p></div>
+          <div id="five"><p class="buttons buttons-lighter">5</p></div>
+          <div id="six"><p class="buttons buttons-lighter">6</p></div>
+          <div id="seven"><p class="buttons buttons-lighter">7</p></div>
+          <div id="eight"><p class="buttons buttons-lighter">8</p></div>
+          <div id="nine"><p class="buttons buttons-lighter">9</p></div>
+          <div id="coma"><p class="buttons buttons-darker">,</p></div>
+          <div id="equal"><p class="buttons buttons-darker">=</p></div>
+          <div id="plus"><p class="buttons buttons-darker">+</p></div>
+          <div id="minus"><p class="buttons buttons-darker">-</p></div>
+          <div id="multi"><p class="buttons buttons-darker">*</p></div>
+          <div id="devide"><p class="buttons buttons-darker">&#247;</p></div>
+          <div id="clear"><p class="buttons-longer buttons-darker">C</p></div>
+          <div id="undo">
+            <p class="buttons buttons-darker">&lt;x</p>
+          </div>
         </div>
       </div>
     </div>
+    <p id="signiture">Created by P.S &#10084;</p>
     <script src="script.js"></script>
   </body>
 </html>
